RESOLVED FIXED135971
Fix gliding in AxisScrollSnapAnimator for Mac
https://bugs.webkit.org/show_bug.cgi?id=135971
Summary Fix gliding in AxisScrollSnapAnimator for Mac
Wenson Hsieh
Reported 2014-08-15 01:57:12 PDT
After finishing animation to a snap point due to a a flick gesture, leftover momentum events that are handled by the AxisScrollSnapAnimator are incorrectly pushed to the momentum tracking window, occasionally causing a second extremely slow gliding animation to take place after reaching the intended snap point. This is fixed by distinguishing the Idle state due to user interaction from the Idle state caused by reaching the intended snap point.
Attachments
Patch (6.26 KB, patch)
2014-08-15 15:27 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2014-08-15 15:27:32 PDT
WebKit Commit Bot
Comment 2 2014-08-15 16:35:35 PDT
Comment on attachment 236679 [details] Patch Clearing flags on attachment: 236679 Committed r172659: <http://trac.webkit.org/changeset/172659>
WebKit Commit Bot
Comment 3 2014-08-15 16:35:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.